/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'

    // lombok
    id 'io.freefair.lombok' version '8.0.1'

    id 'com.adarshr.test-logger' version '3.2.0'
    
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:31.1-jre'

    // postgresql JDBC driver
    implementation 'org.postgresql:postgresql:42.6.0'

    // AAS4J
    implementation 'org.eclipse.digitaltwin.aas4j:dataformat-json:1.0.0-milestone-03.1'

    implementation 'org.json:json:20230227'
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
    implementation 'ch.qos.logback:logback-classic:1.4.8'
    implementation 'commons-io:commons-io:2.13.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'io.aipim.vcppostgrestoaas.App'
}

testlogger {
    theme 'mocha'
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClass
    }
    archiveVersion = ''
    includes = ['ua.json']
}

shadowJar {
    archiveVersion = jar.archiveVersion
}
